fix double scrollbar issue when close modal

--- a/src/component/UI/Modal.module.scss
+++ b/src/component/UI/Modal.module.scss
@@ -32,10 +32,8 @@
 
 .closeModal__active {
   animation: fade-out 0.3s ease-in;
-  opacity: 0;
 }
 .closeModal__done {
-  opacity: 0;
   transform: translateY(100%);
 }
 
@@ -59,6 +57,6 @@
 
   100% {
     opacity: 0;
-    transform: translate(100%, 100%);
+    transform: translate(0%, 100%);
   }
 }
